--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,7 +15,7 @@ dependencies:
   - role: EHER.web
     eher_web_name: 'packages'
     eher_web_server_name: "{{ eher_package_server_host|default('localhost') }}"
-    eher_web_port: "{{ eher_package_server_port|default(80) }}"")}}""'')}}"
+    eher_web_port: "{{ eher_package_server_port|default(80) }}"
     eher_web_root: '/var/www/packages'
     eher_web_rewrite: []
     eher_web_php_enabled: false
